overflow component issue fixed, mobile UI changes

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,10 +86,11 @@ body {
     var(--pal1-I-cerise) 100%
   );
   background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
+  width: auto;
+  height: auto;
   color: var(--pal1-J-platinum);
 }
+
 
 
 .main {
@@ -225,7 +226,7 @@ body {
 }
 
 .dropdown {
-  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end;
+  @apply absolute right-0 top-full mt-3 w-full p-5 z-10 rounded-lg bg-black min-w-[210px] flex flex-col gap-2 justify-end items-end;
 }
 
 .dropdown_link {
